# arb

./: .env.example  .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
config/: base.official.toml  base.secondary.toml  base.sources.toml
src/: book.rs  config.rs  graph.rs  lib.rs  main.rs  math.rs  path.rs  pool.rs  types.rs
src/amm/: aerodrome.rs  balancer.rs  balancer_math.rs  curve.rs  mod.rs  solidly.rs  univ2.rs  univ3.rs
src/live/: bench.rs  engine.rs  event.rs  mod.rs  reconcile.rs  registry.rs  source.rs  ws.rs
src/live/base/: dual.rs  flashblocks.rs  groundtruth.rs  loader.rs  mod.rs  price.rs  rpc.rs  scan.rs  status.rs  synced.rs  v3state.rs  v3sync.rs  verify.rs
src/sim/: engine.rs  mod.rs  pdf.rs  rng.rs
